# dz3

Flask project/: main.py  pyproject.toml
Flask project/static/: Post-Template.css  contacts.css  index.css  intlTelInput.css  menu.css
Flask project/static/javascript/: intlTelInput.min.js  jquery-1.9.1.min.js  nicepage.js  utils.js
Flask project/templates/: _base.html  add_employee.html  base.html  contacts.html  index.html  pizzas.html
